--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
+    "migrate-mongo": "^5.0.1",
     "morgan": "~1.9.0",
-    "pug": "^2.0.3"
+    "mysql2": "^1.6.5",
+    "passport-jwt": "^4.0.0",
+    "pug": "^2.0.3",
+    "sequelize": "^5.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
