--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "mysql2": "^1.6.5",
     "passport-jwt": "^4.0.0",
     "pug": "^2.0.3",
-    "sequelize": "^5.2.0"
+    "sequelize": "^5.2.0",
+    "sequelize-cli": "^5.4.0",
+    "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
