--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -18,6 +19,7 @@
     "pug": "^2.0.3",
     "sequelize": "^5.2.0",
     "sequelize-cli": "^5.4.0",
+    "swagger-jsdoc": "^3.2.8",
     "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
