--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "express": "~4.16.0",
     "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
+    "jwt-simple": "^0.5.5",
     "migrate-mongo": "^5.0.1",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
-    "passport-jwt": "^4.0.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "pug": "^2.0.3",
     "sequelize": "^5.2.0",
     "sequelize-cli": "^5.4.0",
