--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "migrate": "migrate-mongo -f ./migrations/migrate-mongo-config.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -14,6 +16,7 @@
     "http-errors": "~1.6.2",
     "jwt-simple": "^0.5.5",
     "migrate-mongo": "^5.0.1",
+    "mongodb": "^3.2.2",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
