--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^3.0.5",
     "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-validator": "^5.3.1",
@@ -19,12 +20,13 @@
     "mongodb": "^3.2.2",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "pug": "^2.0.3",
-    "sequelize": "^5.2.0",
+    "sequelize": "^5.8.6",
     "sequelize-cli": "^5.4.0",
-    "swagger-jsdoc": "^3.2.8",
+    "swagger-jsdoc": "^3.2.9",
     "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
