--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-simple": "^0.5.5",
     "migrate-mongo": "^5.0.1",
     "mongodb": "^3.2.2",
+    "mongoose": "^5.5.8",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
     "nodemailer": "^6.1.1",
