--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.2.2",
     "mongoose": "^5.5.8",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "mysql2": "^1.6.5",
     "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
